--- a/src/content/graphos/cloud-routing/serverless/index.mdx
+++ b/src/content/graphos/cloud-routing/serverless/index.mdx
@@ -10,7 +10,7 @@ Serverless is moving to AWS. If you initialized your serverless cloud before May
 
 </Note>
 
-GraphOS Serverless cloud routers run on shared infrastructure that Apollo manages. Serverless is designed for demos, proof-of-concepts, and small-scale production apps that don't require more than ten requests per second.
+GraphOS Serverless cloud routers run on shared infrastructure that Apollo manages. Serverless is designed for demos, proof-of-concepts, and small-scale production apps that don't require more than ten requests per second (RPS).
 
 ## Serverless compute limitations
 
