--- a/src/content/graphos/cloud-routing/serverless/index.mdx
+++ b/src/content/graphos/cloud-routing/serverless/index.mdx
@@ -46,7 +46,7 @@ In addition to **Initializing**, **Running**, and **Error** [statuses](../#cloud
 
 Serverless cloud routers that haven't received requests for seven days automatically go to sleep. While sleeping, your cloud router can't serve requests.
 
-Sleeping cloud routers automatically wake up once they receive requests to the `apollographos.net` endpoint. While waking, your cloud router can't process incoming requests. It typically takes about one minute to wake up.
+Sleeping cloud routers automatically wake up once they receive requests. While waking, your cloud router can't process incoming requests. It typically takes about one minute to wake up.
 
 ### Deleted
 
