--- a/src/content/graphos/cloud-routing/serverless/aws-migration.mdx
+++ b/src/content/graphos/cloud-routing/serverless/aws-migration.mdx
@@ -43,7 +43,7 @@ With the extended inactivity threshold, cloud routers that haven't received traf
 
 ## Who needs to migrate?
 
-Only GraphOS Serverless plan customers using a cloud router running on Fly.io need to migrate. You can check if your cloud router runs on Fly.io by looking at the region under the **Cloud Router Details** on the graph's overview page. If the region is **ord - Chicago**, you need to migrate.
+Only GraphOS Serverless plan customers using a cloud router running on Fly.io need to migrate. You can check if your cloud router runs on Fly.io by checking its region on the **Overview** page in GraphOS Studio. If the region is **ord - Chicago**, you need to migrate.
 
 [To-do: add screenshot of migration banner]
 
